--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
         <title>xrit-rx</title>
 
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-        <link rel="stylesheet" href="css/dash.css" />
+        <link rel="stylesheet" href="css/dash.css?v=2.0.0" />
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     </head>
