--- a/src/html/api-docs.html
+++ b/src/html/api-docs.html
@@ -12,7 +12,7 @@
         <noscript><link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'></noscript>
         
         <!-- Local CSS loads first -->
-        <link rel="stylesheet" href="css/dash.css?v=2.0.0" />
+        <link rel="stylesheet" href="css/dash.css" />
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
